--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
         run: bun install
 
       - name: Build package
-        run: bun build ./index.ts --outdir ./dist --target node
+        run: bun build ./index.ts --outdir ./dist --target bun
 
       - name: Create dist package.json
         run: |
