--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,12 @@ jobs:
           node-version: "22"
           registry-url: "https://registry.npmjs.org"
 
+      - name: Use npm 11.5.1+
+        run: npm install -g npm@11.5.1
+
+      - name: Verify npm version
+        run: npm --version
+
       - name: Set version from tag
         run: npm version ${GITHUB_REF#refs/tags/v} --no-git-tag-version
 
